--- a/Russian.lng
+++ b/Russian.lng
@@ -1,5 +1,5 @@
 ﻿|~LANGUAGENAME|                |Russian|
-|~LANGUAGEVERSION|             |1.17|
+|~LANGUAGEVERSION|             |1.18|
 |~LANGUAGEAUTHOR|              |Varrey|
 |~LANGUAGEAUTHOREMAIL|         |keepass.ru@gmail.com|
 
@@ -647,7 +647,7 @@
     |KeePass заменит все существующие группы и записи на новые из импортируемого файла, если они имеют одинаковые идентификаторы.|
 |Overwrite if newer| |Переписывать новые|
 |KeePass will compare the last-modified times of the groups/entries and replace the existing ones only if the ones to import are newer.|
-    |KeePass сравнит время последнего изменения групп/записей и заменит существующие только если импортируемые более новые.|
+    |KeePass сравнит время последнего изменения групп/записей и заменит существующие только, если импортируемые более новые.|
 
 |Copy &URL to Clipboard| |Скопировать &ссылку в буфер обмена|
 |Copy URLs to clipboard instead of launching them (exception: cmd:// URLs)|
@@ -741,9 +741,9 @@
 |Exclude the following characters:| |Исключать следующие символы:|
 |Fields to print| |Поля для печати|
 |Here you can customize the printed sheet.| |Здесь можно настроить страницу для печати.|
-|No repeating characters| |Без повторяющихся символов|
+|Each character must occur at most once| |Каждый символ должен встречаться не больше одного раза|
 |Options/rules marked with an asterisk reduce the security of generated passwords. Only enable them if you are forced to follow such rules by the website, application or password policy.|
-    |Параметры/правила, помеченные звездочкой, уменьшают защищенность генерируемых паролей. Включайте их только если приложение, для которого используется пароль, требует этого.|
+    |Параметры/правила, помеченные звездочкой, уменьшают защищенность генерируемых паролей. Включайте их только, если приложение, для которого используется пароль, требует этого.|
 |Print Options| |Настройка печати|
 |Print backup entries (entries in the 'Backup' group)| |Распечатывать резервные записи (записи из группы 'Резервирование')|
 |Provider| |Провайдер|
@@ -856,10 +856,12 @@
 |Plugin unknown.| |Неизвестный модуль.|
 |Pre-release version.| |Предвыпускная версия.|
 |The specified name is reserved.| |Указанное имя зарезервированно.|
-|Up to date.| |Актульно.|
+|Up to date.| |Актуально.|
 |Use CNG/BCrypt for key transformations (only Windows Vista and higher)| |Использовать CNG/BCrypt для трансформации ключа (Windows Vista и выше)|
 |Use the KeePass 2.x 'Export' feature to migrate this file| |Попробуйте экспортировать этот файл из KeePass 2.x|
 |see the <A HREF="h">help manual</A> for details.| |смотрите подробнее в <A HREF="h">справке</A>.|
 
 |Ctrl| |Ctrl|
 |Use file transactions for writing databases| |Использовать файловые транзакции при сохранении базы паролей|
+
+|Do&n't delete| |&Не удалять|
