--- a/SimplifiedChinese.lng
+++ b/SimplifiedChinese.lng
@@ -1,7 +1,7 @@
-﻿2011-03-30 01:19|~LANGUAGENAME|
+﻿2011-06-24 01:20|~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.19|
+|1.20|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ C&D|
 |~LANGUAGEAUTHOREMAIL|
@@ -1310,3 +1310,9 @@
 |请勿删除(&N)|
 |Remember key sources (key file paths, provider names, ...)|
 |记住密匙源（文件路径、提供者名称等...）|
+|Custom database color:|
+|自定义数据库颜色：|
+|&Yes|
+|是(&Y)|
+|&No|
+|否(&N)|
