--- a/SimplifiedChinese.lng
+++ b/SimplifiedChinese.lng
@@ -1,7 +1,7 @@
-﻿2011-06-24 01:20|~LANGUAGENAME|
+﻿2011-10-8 01:21|~LANGUAGENAME|
 |简体中文|
 |~LANGUAGEVERSION|
-|1.20|
+|1.21|
 |~LANGUAGEAUTHOR|
 |Leo Dou @ C&D|
 |~LANGUAGEAUTHOREMAIL|
@@ -1168,8 +1168,8 @@
 |覆盖已有的密匙文件？|
 |Save|
 |保存|
-|Discard changes|
-|不保存更改|
+|&Discard changes|
+|不保存更改(&D)|
 |Save database changes before closing the file?|
 |关闭文件前保存数据库更改？|
 |Save database changes before exiting KeePass?|
@@ -1306,8 +1306,6 @@
 |写入数据库时使用文件置换（成功写入临时文件后再替换原文件）|
 |Ctrl|
 |Ctrl|
-|Do&n't delete|
-|请勿删除(&N)|
 |Remember key sources (key file paths, provider names, ...)|
 |记住密匙源（文件路径、提供者名称等...）|
 |Custom database color:|
@@ -1316,3 +1314,5 @@
 |是(&Y)|
 |&No|
 |否(&N)|
+|Minimize main window after locking the workspace|
+|锁定工作区后最小化主窗口|
