--- a/TraditionalChinese.lng
+++ b/TraditionalChinese.lng
@@ -1,7 +1,7 @@
 ﻿|~LANGUAGENAME|
 |繁體中文(臺灣)|
 |~LANGUAGEVERSION|
-|1.20 - 1|
+|1.21 - 1|
 |~LANGUAGEAUTHOR|
 |高祥元 (Kao Shiang-Yuan)|
 |~LANGUAGEAUTHOREMAIL|
@@ -600,6 +600,8 @@
 |更多語言(&G)...|
 |Lock workspace when minimizing the main window|
 |在最小化主視窗時鎖定|
+|Minimize main window after locking the workspace|
+|在鎖定後將主視窗最小化|
 |Lock workspace when locking Windows, switching user or sleeping|
 |在桌面鎖定、切換使用者或進入省電模式時鎖定。|
 |Lock workspace after the following idle time (seconds):|
@@ -1152,7 +1154,7 @@
 |放棄資料庫變更並結束KeePass。|
 |Discard all changes made to the database and lock the KeePass workspace.|
 |放棄資料庫變更並鎖定。|
-|Discard changes|
+|&Discard changes|
 |放棄變更|
 |Save all changes made to the database and close the file.|
 |儲存資料庫變更並關閉檔案。|
@@ -1288,8 +1290,6 @@
 |Ctrl|
 |Use file transactions for writing databases|
 |使用transaction方式寫入資料庫檔案|
-|Do&n't delete|
-|不要刪除(&N)|
 |Each character must occur at most once|
 |每個字元最多只能出現一次|
 |Remember key sources (key file paths, provider names, ...)|
